# bochner

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
docs/: gauge-multigrid.md  gauge-solver-comparison.md  simulation-algorithm.md
scripts/: build_petsc_slepc.sh  frelaxation_twogrid.py  regen_eigen_tables.sh  regen_eigen_tables_continue.sh  verify_lower_bound.py
src/: CMakeLists.txt
src/extraction/: CMakeLists.txt  MacConnectionLaplacian.cpp  MacConnectionLaplacian.h  MacFilaments.cpp  MacFilaments.h
src/fluid/: CMakeLists.txt  MacAdvection.cpp  MacAdvection.h  MacCharacteristicMap.cpp  MacCharacteristicMap.h  MacExtrapolate.cpp  MacExtrapolate.h  MacFluidSolver.cpp  MacFluidSolver.h  MacPressureAssembly.cpp  MacProjection.cpp  MacProjection.h  MacProjectionLegacy.cpp  MacVortexRing.cpp  MacVortexRing.h  PoissonMGPCG.cpp  PoissonMGPCG.h
src/gpu/: CMakeLists.txt  MetalContext.h  MetalContext.mm
src/grid/: CMakeLists.txt  CooMatrix.cpp  CooMatrix.h  GridOperators.cpp  GridOperators.h  MacGrid.cpp  MacGrid.h  MacObstacle.cpp  MacObstacle.h  SparseMg.h  Vec3.h
src/solvers/: BlockLobpcg.cpp  BlockLobpcg.h  CMakeLists.txt  EigenSolver.cpp  EigenSolver.h  GaugeEigen.cpp  GaugeEigen.h  GaugeMultigrid.cpp  GaugeMultigrid.h  MacSubdivision.cpp  MacSubdivision.h  PetscSolver.cpp  PetscSolver.h  PoissonMultigrid.cpp  PoissonMultigrid.h  SunGauge.cpp  SunGauge.h  WilsonMc.cpp  WilsonMc.h
tests/: CMakeLists.txt  doctest_main.cpp  test_alg5_subroutines.cpp  test_block_lobpcg.cpp  test_channel_flow.cpp  test_connection_laplacian_structure.cpp  test_convergence_guarantees.cpp  test_coo_matrix.cpp  test_diffusion.cpp  test_eig_methods.cpp  test_eigensolver.cpp  test_gauge_eigen.cpp  test_gauge_eigen_accuracy.cpp  test_gauge_multigrid.cpp  test_grid_operators.cpp  test_grid_physics.cpp  test_mac_advection.cpp  test_mac_characteristic_map.cpp  test_mac_connection_laplacian.cpp  test_mac_extraction.cpp  test_mac_filaments.cpp  test_mac_fluidsolver.cpp  test_mac_projection.cpp  test_mac_subdivision.cpp  test_mac_vortexring.cpp  test_macgrid.cpp  test_mc_gauge.cpp  test_metal_sample.cpp  test_obstacle_flow.cpp  test_petsc_solver.cpp  test_poisson_mgpcg.cpp  test_poisson_multigrid.cpp  test_sun_gauge.cpp  test_weighted_anisotropic.cpp
tools/: BenchTiming.h  CMakeLists.txt  ablation_bench.cpp  animate_filaments.py  aniso_bench.cpp  block_eig_bench.cpp  chebyshev_lanczos_bench.cpp  convergence_factor_bench.cpp  eig_benchmark.cpp  eig_compare.cpp  export_operator.cpp  hill_decomp.cpp  mc_gauge_bench.cpp  mg_bench.cpp  obstacle_profile.cpp  pipeline_profile.cpp  pressure_bench.cpp  pyamg_baseline.py  ring_demo_grid.cpp  seed_slice.cpp  subdivision_demo.cpp  sun_gauge_bench.cpp  torus_eig_compare.cpp  torus_seed_check.cpp  warmstart_bench.cpp
tools/complex_baseline/: .gitignore  Makefile  embedding_bench.cpp
tools/viewer/: CMakeLists.txt  glmath.h  main.cpp  obstacle_main.cpp  viewer_support.cpp  viewer_support.h
